# CPong

./: .gitignore  CMakeLists.txt  CMakePresets.json  CPong.cpp  CPong.h  README.md
src/: Game.cpp  Game.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
